# example-utoipa

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  flake.nix
.github/workflows/: build_nix.yml
examples/nodejs-client/: flake.nix  index.mjs
src/: main.rs
tests/: default.nix
